fix CD pipeline file

--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -96,10 +96,11 @@ jobs:
           ports: 80
           registry-username: ${{ secrets.ACR_USERNAME }}
           registry-password: ${{ secrets.ACR_PASSWORD }}
-          secure-environment-variables: DATABASE_URL=${{ secrets.DATABASE_URL }} |
-            CLIENT_URL=${{ secrets.CLIENT_URL }} |
-            GOOGLE_CLIENT_ID=${{ secrets.GOOGLE_CLIENT_ID }} |
-            GOOGLE_CLIENT_SECRET=${{ secrets.GOOGLE_CLIENT_SECRET }} |
-            GOOGLE_REDIRECTED_URL=${{ secrets.GOOGLE_REDIRECTED_URL }} |
-            GOOGLE_REFRESH_TOKEN=${{ secrets.GOOGLE_REFRESH_TOKEN }} |
+          secure-environment-variables: >
+            DATABASE_URL=${{ secrets.DATABASE_URL }}
+            CLIENT_URL=${{ secrets.CLIENT_URL }}
+            GOOGLE_CLIENT_ID=${{ secrets.GOOGLE_CLIENT_ID }}
+            GOOGLE_CLIENT_SECRET=${{ secrets.GOOGLE_CLIENT_SECRET }}
+            GOOGLE_REDIRECTED_URL=${{ secrets.GOOGLE_REDIRECTED_URL }}
+            GOOGLE_REFRESH_TOKEN=${{ secrets.GOOGLE_REFRESH_TOKEN }}
             JWT_SECRET_KEY=${{ secrets.JWT_SECRET_KEY }}
