--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "description": "charity website server",
   "main": "src/index.ts",
   "scripts": {
-    "start:prod": "node build/index.js",
-    "start:dev": "ts-node src/index.ts",
-    "dev": "nodemon -L src/index.ts",
+    "prebuild": "rimraf build",
+    "build": "nest build",
+    "start": "nest start",
+    "start:dev": "nest start --watch",
+    "start:prod": "node build/index",
+    "lint": "eslint --ext .ts .",
     "test:components": "mocha -r ts-node/register 'src/**/*.test.ts'",
     "test:e2e": "mocha -r ts-node/register 'tests/**/*.test.ts'",
-    "lint": "eslint --ext .ts .",
-    "build": "tsc -p ."
+    "test": "npm run test:components && npm run test:e2e"
   },
   "author": "Bassma Team",
   "license": "ISC",
@@ -43,5 +45,11 @@
     "sinon": "^14.0.0",
     "ts-node": "^10.8.1",
     "typescript": "^4.7.4"
+  },
+  "dependencies": {
+    "@nestjs/common": "^8.4.7",
+    "@nestjs/core": "^8.4.7",
+    "reflect-metadata": "^0.1.13",
+    "rxjs": "^7.5.5"
   }
 }
