--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,6 +26,7 @@
         "no-useless-constructor": "off",
         "mocha/no-mocha-arrows": "off",
         "prettier/prettier": "error",
+        "security/detect-object-injection": "off",
         "node/no-unsupported-features/es-syntax": "off",
         "node/no-unpublished-import": ["error", { "allowModules": ["chai", "@faker-js/faker", "chai-http", "chai-as-promised", "sinon"] }],
         "node/no-missing-import": ["error", { "tryExtensions": [".js", ".json", ".node", ".ts"] }]
