--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
     "start:dev": "nest start --watch",
     "start:prod": "node build/index",
     "lint": "eslint --ext .ts .",
-    "test:components": "mocha -r ts-node/register 'src/**/*.test.ts'",
-    "test:e2e": "mocha -r ts-node/register 'tests/**/*.test.ts'",
-    "test": "npm run test:components && npm run test:e2e"
+    "test:authentication": "mocha 'src/components/AuthenticationManager/**/*.test.ts' -r ts-node/register",
+    "test:users": "mocha 'src/components/UsersManager/**/*.test.ts' -r ts-node/register",
+    "test:e2e": "mocha 'tests/**/*.test.ts' -r ts-node/register",
+    "test": "npm run test:authentication && npm run test:users && npm run test:e2e"
+  },
+  "mocha": {
+    "env": "dotenv_config_path=./.env.test"
   },
   "author": "Bassma Team",
   "license": "ISC",
@@ -20,6 +24,7 @@
     "@faker-js/faker": "^7.3.0",
     "@types/chai": "^4.3.1",
     "@types/chai-as-promised": "^7.1.5",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/mocha": "^9.1.1",
     "@types/node": "^18.0.0",
     "@types/safe-regex": "^1.1.3",
@@ -50,8 +55,14 @@
     "@nestjs/common": "^8.4.7",
     "@nestjs/core": "^8.4.7",
     "@nestjs/platform-express": "^8.4.7",
+    "@types/bcrypt": "^5.0.0",
+    "@types/uuid": "^8.3.4",
+    "bcrypt": "^5.0.1",
+    "dotenv": "^16.0.1",
+    "jsonwebtoken": "^8.5.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.5.5",
-    "source-map-support": "^0.5.21"
+    "source-map-support": "^0.5.21",
+    "uuid": "^8.3.2"
   }
 }
