--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
 JWT_SECRET_KEY=<SECRET_KEY>
 NODE_ENV=<YOUR_CURRENT_ENV>
+DATABASE_URL=<postgresql://USER:PASSWORD@HOST:PORT/DATABASE?schema=SCHEMA>
