--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "start:prod": "node build/index",
     "lint": "eslint --ext .ts .",
     "test:authentication": "mocha 'src/components/AuthenticationManager/**/*.test.ts' -r ts-node/register",
+    "test:regions": "mocha 'src/components/RegionsManager/**/*.test.ts' -r ts-node/register",
     "test:users": "mocha 'src/components/UsersManager/**/*.test.ts' -r ts-node/register",
     "test:e2e": "mocha 'tests/**/*.test.ts' -r ts-node/register",
     "test": "npm run test:authentication && npm run test:users && npm run test:e2e"
@@ -28,6 +29,8 @@
     "@types/mocha": "^9.1.1",
     "@types/node": "^18.0.0",
     "@types/safe-regex": "^1.1.3",
+    "@types/bcrypt": "^5.0.0",
+    "@types/uuid": "^8.3.4",
     "@types/sinon": "^10.0.11",
     "@typescript-eslint/eslint-plugin": "^5.29.0",
     "@typescript-eslint/parser": "^5.29.0",
@@ -49,14 +52,14 @@
     "safe-regex": "^2.1.1",
     "sinon": "^14.0.0",
     "ts-node": "^10.8.1",
+    "prisma": "^4.0.0",
     "typescript": "^4.7.4"
   },
   "dependencies": {
     "@nestjs/common": "^8.4.7",
     "@nestjs/core": "^8.4.7",
     "@nestjs/platform-express": "^8.4.7",
-    "@types/bcrypt": "^5.0.0",
-    "@types/uuid": "^8.3.4",
+    "@prisma/client": "^4.0.0",
     "bcrypt": "^5.0.1",
     "dotenv": "^16.0.1",
     "jsonwebtoken": "^8.5.1",
@@ -64,5 +67,9 @@
     "rxjs": "^7.5.5",
     "source-map-support": "^0.5.21",
     "uuid": "^8.3.2"
+  },
+  "prisma": {
+    "schema": "src/components/_shared_/persistence/prisma/schema.prisma",
+    "seed": "ts-node src/components/_shared_/persistence/prisma/seed.ts"
   }
 }
