--- a/package.json
+++ b/package.json
@@ -23,15 +23,15 @@
   "license": "ISC",
   "devDependencies": {
     "@faker-js/faker": "^7.3.0",
+    "@types/bcrypt": "^5.0.0",
     "@types/chai": "^4.3.1",
     "@types/chai-as-promised": "^7.1.5",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/mocha": "^9.1.1",
     "@types/node": "^18.0.0",
     "@types/safe-regex": "^1.1.3",
-    "@types/bcrypt": "^5.0.0",
-    "@types/uuid": "^8.3.4",
     "@types/sinon": "^10.0.11",
+    "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.29.0",
     "@typescript-eslint/parser": "^5.29.0",
     "chai": "^4.3.6",
@@ -49,10 +49,11 @@
     "eslint-plugin-security": "^1.5.0",
     "mocha": "^10.0.0",
     "prettier": "2.7.1",
+    "prisma": "^4.0.0",
     "safe-regex": "^2.1.1",
     "sinon": "^14.0.0",
+    "ts-mockito": "^2.6.1",
     "ts-node": "^10.8.1",
-    "prisma": "^4.0.0",
     "typescript": "^4.7.4"
   },
   "dependencies": {
