create donation use case done

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -29,6 +29,7 @@
         "prettier/prettier": "error",
         "security/detect-object-injection": "off",
         "@typescript-eslint/no-explicit-any": "off",
+        "@typescript-eslint/no-non-null-assertion": "off",
         "node/no-unsupported-features/es-syntax": "off",
         "node/no-unpublished-import": ["error", { "allowModules": ["chai", "@faker-js/faker", "chai-http", "chai-as-promised", "sinon", "ts-mockito"] }],
         "node/no-missing-import": ["error", { "tryExtensions": [".js", ".json", ".node", ".ts"] }]
