--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 JWT_SECRET_KEY=<SECRET_KEY>
 NODE_ENV=<YOUR_CURRENT_ENV>
 DATABASE_URL=<postgresql://USER:PASSWORD@HOST:PORT/DATABASE?schema=SCHEMA>
+CLOUDINARY_URL=<cloudinary://CLOUDINARY_API_KEY:CLOUDINARY_API_SECRET@CLOUD_NAME>
