--- a/.env.test
+++ b/.env.test
@@ -1,3 +1,4 @@
 JWT_SECRET_KEY="some-secret-key"
 DATABASE_URL="postgresql://postgres:yasser2002@localhost:5432/sadaqa_test?schema=public"
 NODE_ENV="test"
+CLOUDINARY_URL="cloudinary://"
