--- a/package.json
+++ b/package.json
@@ -9,14 +9,14 @@
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:prod": "node build/index",
-    "lint": "eslint --ext .ts .",
     "test:authentication": "mocha 'src/components/AuthenticationManager/**/*.test.ts' -r ts-node/register",
     "test:regions": "mocha 'src/components/RegionsManager/**/*.test.ts' -r ts-node/register",
     "test:users": "mocha 'src/components/UsersManager/**/*.test.ts' -r ts-node/register",
     "test:posts": "mocha 'src/components/PostsManager/**/*.test.ts' -r ts-node/register",
     "test:media": "mocha 'src/components/MediaManager/**/*.test.ts' -r ts-node/register",
     "test:e2e": "mocha 'tests/**/*.test.ts' -r ts-node/register",
-    "test": "npm run test:authentication && npm run test:users && npm run test:regions && npm run test:posts && npm run test:media && npm run test:e2e"
+    "test": "npm run test:authentication && npm run test:users && npm run test:regions && npm run test:posts && npm run test:media && npm run test:e2e",
+    "lint": "eslint --ext .ts ."
   },
   "mocha": {
     "env": "dotenv_config_path=./.env.test"
@@ -29,9 +29,11 @@
     "@types/chai": "^4.3.1",
     "@types/chai-as-promised": "^7.1.5",
     "@types/jsonwebtoken": "^8.5.8",
+    "@types/mime-types": "^2.1.1",
     "@types/mocha": "^9.1.1",
     "@types/node": "^18.0.0",
     "@types/safe-regex": "^1.1.3",
+    "@types/sharp": "^0.30.4",
     "@types/sinon": "^10.0.11",
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.29.0",
@@ -64,15 +66,20 @@
     "@nestjs/platform-express": "^8.4.7",
     "@prisma/client": "^4.0.0",
     "bcrypt": "^5.0.1",
+    "cloudinary": "^1.30.0",
     "dotenv": "^16.0.1",
     "jsonwebtoken": "^8.5.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.5.5",
+    "sharp": "^0.30.7",
     "source-map-support": "^0.5.21",
     "uuid": "^8.3.2"
   },
   "prisma": {
     "schema": "src/components/_shared_/persistence/prisma/schema.prisma",
     "seed": "ts-node src/components/_shared_/persistence/prisma/seed.ts"
+  },
+  "engines": {
+    "node": ">=15.0.0"
   }
 }
