--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "test:users": "mocha 'src/components/UsersManager/**/*.test.ts' -r ts-node/register",
     "test:posts": "mocha 'src/components/PostsManager/**/*.test.ts' -r ts-node/register",
     "test:media": "mocha 'src/components/MediaManager/**/*.test.ts' -r ts-node/register",
-    "test:e2e": "mocha 'tests/**/*.test.ts' -r ts-node/register",
-    "test": "npm run test:authentication && npm run test:users && npm run test:regions && npm run test:posts && npm run test:media && npm run test:e2e",
+    "test:event-bus": "mocha 'tests/event-bus/*.test.ts' -r ts-node/register",
+    "test:e2e": "mocha 'tests/e2e/*.test.ts' -r ts-node/register",
+    "test": "npm run test:authentication && npm run test:users && npm run test:regions && npm run test:posts && npm run test:media && npm run test:event-bus && npm run test:e2e",
     "lint": "eslint --ext .ts ."
   },
   "mocha": {
@@ -31,6 +32,7 @@
     "@types/jsonwebtoken": "^8.5.8",
     "@types/mime-types": "^2.1.1",
     "@types/mocha": "^9.1.1",
+    "@types/multer": "^1.4.7",
     "@types/node": "^18.0.0",
     "@types/safe-regex": "^1.1.3",
     "@types/sharp": "^0.30.4",
@@ -61,9 +63,10 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
-    "@nestjs/common": "^8.4.7",
-    "@nestjs/core": "^8.4.7",
-    "@nestjs/platform-express": "^8.4.7",
+    "@nestjs/common": "^9.0.3",
+    "@nestjs/core": "^9.0.3",
+    "@nestjs/platform-express": "^9.0.3",
+    "@nestjs/swagger": "^6.0.4",
     "@prisma/client": "^4.0.0",
     "bcrypt": "^5.0.1",
     "cloudinary": "^1.30.0",
