--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,37 +1,47 @@
 {
-    "env": {
-        "browser": true,
-        "es2021": true
-    },
-    "extends": [
-        "standard",
-        "eslint:recommended",
-        "plugin:mocha/recommended",
-        "plugin:node/recommended",
-        "plugin:@typescript-eslint/recommended",
-        "plugin:prettier/recommended",
-        "plugin:security/recommended"
-    ],
-    "parser": "@typescript-eslint/parser",
-    "parserOptions": {
-        "ecmaVersion": "latest",
-        "sourceType": "module"
-    },
-    "plugins": [
-        "prettier",
-        "@typescript-eslint",
-        "mocha"
-    ],
-    "rules": {
-        "no-useless-constructor": "off",
-        "mocha/no-mocha-arrows": "off",
-        "mocha/no-setup-in-describe": "off",
-        "prettier/prettier": "error",
-        "security/detect-object-injection": "off",
-        "@typescript-eslint/no-explicit-any": "off",
-        "@typescript-eslint/no-non-null-assertion": "off",
-        "node/no-unsupported-features/es-syntax": "off",
-        "node/no-unpublished-import": ["error", { "allowModules": ["chai", "@faker-js/faker", "chai-http", "chai-as-promised", "sinon", "ts-mockito"] }],
-        "node/no-missing-import": ["error", { "tryExtensions": [".js", ".json", ".node", ".ts"] }]
-    }
+  "env": {
+    "browser": true,
+    "es2021": true
+  },
+  "extends": [
+    "standard",
+    "eslint:recommended",
+    "plugin:mocha/recommended",
+    "plugin:node/recommended",
+    "plugin:@typescript-eslint/recommended",
+    "plugin:prettier/recommended",
+    "plugin:security/recommended"
+  ],
+  "parser": "@typescript-eslint/parser",
+  "parserOptions": {
+    "ecmaVersion": "latest",
+    "sourceType": "module"
+  },
+  "plugins": [
+    "prettier",
+    "@typescript-eslint",
+    "mocha"
+  ],
+  "rules": {
+    "no-useless-constructor": "off",
+    "mocha/no-mocha-arrows": "off",
+    "mocha/no-setup-in-describe": "off",
+    "prettier/prettier": "error",
+    "security/detect-object-injection": "off",
+    "@typescript-eslint/no-explicit-any": "off",
+    "@typescript-eslint/no-non-null-assertion": "off",
+    "node/no-unsupported-features/es-syntax": "off",
+    "node/no-unpublished-import": "off",
+    "node/no-missing-import": [
+      "error",
+      {
+        "tryExtensions": [
+          ".js",
+          ".json",
+          ".node",
+          ".ts"
+        ]
+      }
+    ]
+  }
 }
