--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "license": "ISC",
   "devDependencies": {
     "@faker-js/faker": "^7.3.0",
+    "@nestjs/testing": "^9.0.3",
     "@types/bcrypt": "^5.0.0",
     "@types/chai": "^4.3.1",
     "@types/chai-as-promised": "^7.1.5",
@@ -37,6 +38,7 @@
     "@types/safe-regex": "^1.1.3",
     "@types/sharp": "^0.30.4",
     "@types/sinon": "^10.0.11",
+    "@types/supertest": "^2.0.12",
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.29.0",
     "@typescript-eslint/parser": "^5.29.0",
@@ -58,6 +60,7 @@
     "prisma": "^4.0.0",
     "safe-regex": "^2.1.1",
     "sinon": "^14.0.0",
+    "supertest": "^6.2.4",
     "ts-mockito": "^2.6.1",
     "ts-node": "^10.8.1",
     "typescript": "^4.7.4"
