--- a/package.json
+++ b/package.json
@@ -1,91 +1,92 @@
 {
-    "name": "sadaqa-server",
-    "version": "1.0.0",
-    "description": "charity website server",
-    "main": "src/index.ts",
-    "scripts": {
-        "prebuild": "rimraf build",
-        "build": "nest build",
-        "start": "nest start",
-        "start:dev": "nest start --watch",
-        "start:prod": "node build/index",
-        "test:authentication": "mocha 'src/components/AuthenticationManager/**/*.test.ts'",
-        "test:regions": "mocha 'src/components/RegionsManager/**/*.test.ts'",
-        "test:users": "mocha 'src/components/UsersManager/**/*.test.ts'",
-        "test:posts": "mocha 'src/components/PostsManager/**/*.test.ts'",
-        "test:media": "mocha 'src/components/MediaManager/**/*.test.ts'",
-        "test:event-bus": "mocha 'tests/event-bus/*.test.ts'",
-        "test:e2e": "mocha 'tests/e2e/*.test.ts'",
-        "test": "npm run test:authentication && npm run test:users && npm run test:regions && npm run test:posts && npm run test:media && npm run test:event-bus && npm run test:e2e",
-        "lint": "eslint --ext .ts ."
-    },
-    "mocha": {
-        "env": "dotenv_config_path=./.env.test"
-    },
-    "author": "Bassma Team",
-    "license": "ISC",
-    "devDependencies": {
-        "@faker-js/faker": "^7.3.0",
-        "@nestjs/testing": "^9.0.3",
-        "@types/bcrypt": "^5.0.0",
-        "@types/chai": "^4.3.1",
-        "@types/chai-as-promised": "^7.1.5",
-        "@types/jsonwebtoken": "^8.5.8",
-        "@types/mime-types": "^2.1.1",
-        "@types/mocha": "^9.1.1",
-        "@types/multer": "^1.4.7",
-        "@types/node": "^18.0.0",
-        "@types/safe-regex": "^1.1.3",
-        "@types/sharp": "^0.30.4",
-        "@types/sinon": "^10.0.11",
-        "@types/supertest": "^2.0.12",
-        "@types/uuid": "^8.3.4",
-        "@typescript-eslint/eslint-plugin": "^5.29.0",
-        "@typescript-eslint/parser": "^5.29.0",
-        "chai": "^4.3.6",
-        "chai-as-promised": "^7.1.1",
-        "chai-http": "^4.3.0",
-        "eslint": "^8.18.0",
-        "eslint-config-prettier": "^8.5.0",
-        "eslint-config-standard": "^17.0.0",
-        "eslint-plugin-import": "^2.26.0",
-        "eslint-plugin-mocha": "^10.0.5",
-        "eslint-plugin-n": "^15.2.3",
-        "eslint-plugin-node": "^11.1.0",
-        "eslint-plugin-prettier": "^4.0.0",
-        "eslint-plugin-promise": "^6.0.0",
-        "eslint-plugin-security": "^1.5.0",
-        "mocha": "^10.0.0",
-        "prettier": "2.7.1",
-        "prisma": "^4.1.0",
-        "safe-regex": "^2.1.1",
-        "sinon": "^14.0.0",
-        "supertest": "^6.2.4",
-        "ts-mockito": "^2.6.1",
-        "ts-node": "^10.8.1",
-        "typescript": "^4.7.4"
-    },
-    "dependencies": {
-        "@nestjs/common": "^9.0.3",
-        "@nestjs/core": "^9.0.3",
-        "@nestjs/platform-express": "^9.0.3",
-        "@nestjs/swagger": "^6.0.4",
-        "@prisma/client": "^4.0.0",
-        "bcrypt": "^5.0.1",
-        "cloudinary": "^1.30.0",
-        "dotenv": "^16.0.1",
-        "jsonwebtoken": "^8.5.1",
-        "reflect-metadata": "^0.1.13",
-        "rxjs": "^7.5.5",
-        "sharp": "^0.30.7",
-        "source-map-support": "^0.5.21",
-        "uuid": "^8.3.2"
-    },
-    "prisma": {
-        "schema": "src/components/_shared_/persistence/prisma/schema.prisma",
-        "seed": "ts-node src/components/_shared_/persistence/prisma/seed.ts"
-    },
-    "engines": {
-        "node": ">=15.0.0"
-    }
+  "name": "sadaqa-server",
+  "version": "1.0.0",
+  "description": "charity website server",
+  "main": "src/index.ts",
+  "scripts": {
+    "prebuild": "rimraf build",
+    "build": "nest build",
+    "start": "nest start",
+    "start:dev": "nest start --watch",
+    "start:prod": "node build/index",
+    "test:authentication": "mocha 'src/components/AuthenticationManager/**/*.test.ts'",
+    "test:regions": "mocha 'src/components/RegionsManager/**/*.test.ts'",
+    "test:users": "mocha 'src/components/UsersManager/**/*.test.ts'",
+    "test:posts": "mocha 'src/components/PostsManager/**/*.test.ts'",
+    "test:media": "mocha 'src/components/MediaManager/**/*.test.ts'",
+    "test:messages": "mocha 'src/components/MessagesManager/**/*.test.ts'",
+    "test:event-bus": "mocha 'tests/event-bus/*.test.ts'",
+    "test:e2e": "mocha 'tests/e2e/*.test.ts'",
+    "test": "npm run test:authentication && npm run test:users && npm run test:regions && npm run test:posts && npm run test:media && npm run test:messages && npm run test:event-bus && npm run test:e2e",
+    "lint": "eslint --ext .ts ."
+  },
+  "mocha": {
+    "env": "dotenv_config_path=./.env.test"
+  },
+  "author": "Bassma Team",
+  "license": "ISC",
+  "devDependencies": {
+    "@faker-js/faker": "^7.3.0",
+    "@nestjs/testing": "^9.0.3",
+    "@types/bcrypt": "^5.0.0",
+    "@types/chai": "^4.3.1",
+    "@types/chai-as-promised": "^7.1.5",
+    "@types/jsonwebtoken": "^8.5.8",
+    "@types/mime-types": "^2.1.1",
+    "@types/mocha": "^9.1.1",
+    "@types/multer": "^1.4.7",
+    "@types/node": "^18.0.0",
+    "@types/safe-regex": "^1.1.3",
+    "@types/sharp": "^0.30.4",
+    "@types/sinon": "^10.0.11",
+    "@types/supertest": "^2.0.12",
+    "@types/uuid": "^8.3.4",
+    "@typescript-eslint/eslint-plugin": "^5.29.0",
+    "@typescript-eslint/parser": "^5.29.0",
+    "chai": "^4.3.6",
+    "chai-as-promised": "^7.1.1",
+    "chai-http": "^4.3.0",
+    "eslint": "^8.18.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-mocha": "^10.0.5",
+    "eslint-plugin-n": "^15.2.3",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-security": "^1.5.0",
+    "mocha": "^10.0.0",
+    "prettier": "2.7.1",
+    "prisma": "^4.1.1",
+    "safe-regex": "^2.1.1",
+    "sinon": "^14.0.0",
+    "supertest": "^6.2.4",
+    "ts-mockito": "^2.6.1",
+    "ts-node": "^10.8.1",
+    "typescript": "^4.7.4"
+  },
+  "dependencies": {
+    "@nestjs/common": "^9.0.3",
+    "@nestjs/core": "^9.0.3",
+    "@nestjs/platform-express": "^9.0.3",
+    "@nestjs/swagger": "^6.0.4",
+    "@prisma/client": "^4.1.1",
+    "bcrypt": "^5.0.1",
+    "cloudinary": "^1.30.0",
+    "dotenv": "^16.0.1",
+    "jsonwebtoken": "^8.5.1",
+    "reflect-metadata": "^0.1.13",
+    "rxjs": "^7.5.5",
+    "sharp": "^0.30.7",
+    "source-map-support": "^0.5.21",
+    "uuid": "^8.3.2"
+  },
+  "prisma": {
+    "schema": "src/components/_shared_/persistence/prisma/schema.prisma",
+    "seed": "ts-node src/components/_shared_/persistence/prisma/seed.ts"
+  },
+  "engines": {
+    "node": ">=15.0.0"
+  }
 }
