email manager done

--- a/.env.test
+++ b/.env.test
@@ -3,3 +3,5 @@ DATABASE_URL="postgresql://postgres:postgres@localhost:5432/sadaqa_test?schema=p
 NODE_ENV="test"
 CLOUDINARY_URL="cloudinary://"
 ADMIN_PASSWORD="some-secret-password"
+BASSMA_EMAIL_ADDRESS="email@gmail.com"
+BASSMA_EMAIL_PASSWORD="some-password"
