--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,5 @@ NODE_ENV=<YOUR_CURRENT_ENV>
 DATABASE_URL=<postgresql://USER:PASSWORD@HOST:PORT/DATABASE?schema=SCHEMA>
 CLOUDINARY_URL=<cloudinary://CLOUDINARY_API_KEY:CLOUDINARY_API_SECRET@CLOUD_NAME>
 ADMIN_PASSWORD=<SECRET_ADMIN_KEY>
+BASSMA_EMAIL_ADDRESS=<EMAIL>
+BASSMA_EMAIL_PASSWORD=<PASSWORD>
