--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@types/mocha": "^9.1.1",
     "@types/multer": "^1.4.7",
     "@types/node": "^18.0.0",
+    "@types/nodemailer": "^6.4.5",
     "@types/safe-regex": "^1.1.3",
     "@types/sharp": "^0.30.4",
     "@types/sinon": "^10.0.11",
@@ -78,6 +79,7 @@
     "cloudinary": "^1.30.0",
     "dotenv": "^16.0.1",
     "jsonwebtoken": "^8.5.1",
+    "nodemailer": "^6.7.8",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.5.5",
     "sharp": "^0.30.7",
