add socket gateways

--- a/package.json
+++ b/package.json
@@ -76,8 +76,11 @@
     "@nestjs/common": "^9.0.3",
     "@nestjs/core": "^9.0.3",
     "@nestjs/platform-express": "^9.0.3",
+    "@nestjs/platform-socket.io": "^9.0.11",
     "@nestjs/swagger": "^6.0.4",
+    "@nestjs/websockets": "^9.0.11",
     "@prisma/client": "^4.1.1",
+    "@types/socket.io": "^3.0.2",
     "bcrypt": "^5.0.1",
     "cloudinary": "^1.30.0",
     "dotenv": "^16.0.1",
