--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -1,4 +1,13 @@
 {
-    "extends": "./tsconfig.json",
-    "exclude": ["node_modules", "build", "tests", "**/tests"]
+  "extends": "./tsconfig.json",
+  "compilerOptions": {
+    "sourceMap": false,
+    "declaration": false
+  },
+  "exclude": [
+    "node_modules",
+    "build",
+    "e2e",
+    "**/tests"
+  ]
 }
