--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -38,3 +38,25 @@ jobs:
           npx prisma db seed
       - name: Run Tests
         run: npm test
+
+  integrate:
+    name: Dockerize and Push to Docker Hub
+    runs-on: ubuntu-latest
+    needs: test
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+      - name: Get Package Version
+        id: package-version
+        uses: martinbeentjes/npm-get-version-action@master
+      - name: Build The Image
+        run: docker build . --tag sadaqa-backend:${{ steps.package-version.outputs.current-version }}
+      - name: Login to Docker Hub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Push To Docker Hub
+        run: docker push sadaqa-backend:${{ steps.package-version.outputs.current-version }}
