--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -52,11 +52,11 @@ jobs:
         id: package-version
         uses: martinbeentjes/npm-get-version-action@master
       - name: Build The Image
-        run: docker build . --tag sadaqa-backend:${{ steps.package-version.outputs.current-version }}
+        run: docker build . --tag yasserbelatreche/sadaqa-backend:${{ steps.package-version.outputs.current-version }}
       - name: Login to Docker Hub
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
       - name: Push To Docker Hub
-        run: docker push sadaqa-backend:${{ steps.package-version.outputs.current-version }}
+        run: docker push yasserbelatreche/sadaqa-backend:${{ steps.package-version.outputs.current-version }}
