move the wilayas seed from the seed script to the RegionsManager

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -33,9 +33,7 @@ jobs:
       - name: Install Dependencies
         run: npm install
       - name: Setup the DB
-        run: |
-          npx prisma db push
-          npx prisma db seed
+        run: npx prisma db push
       - name: Run Tests
         run: npm test
 
