--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -33,7 +33,9 @@ jobs:
       - name: Install Dependencies
         run: npm install
       - name: Setup the DB
-        run: npx prisma db push
+        run: |
+          npx prisma db push
+          npx prisma db seed
       - name: Run Tests
         run: npm test
 
