--- a/.dockerignore
+++ b/.dockerignore
@@ -1,10 +1,10 @@
-.git
-.gitignore
-.github
-node_modules
-build
-README.md
-.env
-coverage
-.nyc_output
-e2e
+#.git
+#.gitignore
+#.github
+#node_modules
+#build
+#README.md
+#.env
+#coverage
+#.nyc_output
+#e2e
