--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Setup Node
         uses: actions/setup-node@v3
         with:
-          node-version: '16.14.0'
+          node-version: '18.*'
           cache: npm
       - name: Install Dependencies
         run: npm install
