--- a/package.json
+++ b/package.json
@@ -83,7 +83,7 @@
     "mocha": "^10.0.0",
     "nyc": "^15.1.0",
     "prettier": "2.7.1",
-    "prisma": "^4.1.1",
+    "prisma": "^4.9.0",
     "safe-regex": "^2.1.1",
     "sinon": "^14.0.0",
     "supertest": "^6.2.4",
@@ -93,9 +93,8 @@
   },
   "prisma": {
     "schema": "src/components/_shared_/persistence/prisma/schema.prisma",
-    "seed": "ts-node src/components/_shared_/persistence/prisma/seed.ts"
   },
   "engines": {
-    "node": ">=15.0.0"
+    "node": "18.x"
   }
 }
