--- a/package.json
+++ b/package.json
@@ -92,7 +92,7 @@
     "typescript": "^4.7.4"
   },
   "prisma": {
-    "schema": "src/components/_shared_/persistence/prisma/schema.prisma",
+    "schema": "src/components/_shared_/persistence/prisma/schema.prisma"
   },
   "engines": {
     "node": "18.x"
